@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.journear.app {
    namespace ui {
      namespace adapters {
        class com.journear.app.ui.adapters.RecyclerViewAdapter {
            - context : Context
            - devicesList : List<NearbyDevice>
            + RecyclerViewAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      namespace adapters {
        class com.journear.app.ui.adapters.RecyclerViewAdapter.ViewHolder {
            + delete : Button
            + destination : TextView
            + edit : Button
            + findRoute : Button
            + findSource : Button
            + id : int
            + source : TextView
            + travelTime : TextView
            + userName : TextView
            + user_rating : TextView
            + ViewHolder()
            + onClick()
        }
      }
    }
  }
  

  com.journear.app.ui.adapters.RecyclerViewAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.journear.app.ui.adapters.RecyclerViewAdapter +-down- com.journear.app.ui.adapters.RecyclerViewAdapter.ViewHolder
  com.journear.app.ui.adapters.RecyclerViewAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.journear.app.ui.adapters.RecyclerViewAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
